--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -31,6 +31,7 @@ $gray-68: #adadad; // black 32%
 $gray-94: #efefef; // black 6%
 $gray-95: #f2f2f2; // black 5%
 $gray-96: #f4f4f4; // black 4%
+$gray-97: #f7f7f7;
 
 //$grays: () !default;
 //$grays: map-merge((
