css updated for contact us section and aslo updated color variables

--- a/src/assets/stylesheets/_header.scss
+++ b/src/assets/stylesheets/_header.scss
@@ -187,7 +187,7 @@
           font-family: "josh-icons";
           font-size: 1rem;
           position: absolute;
-          color: #1c1c1c;
+          color: $gray-11;
           right: 1rem;
           border: none;
 
